<resources>
    <string name="app_name">박물관 나들이</string>

    <!-- 카테고리 한글 이름 정의 -->
    <string name="category1_name">국립 1</string>
    <string name="category2_name">국립 2</string>
    <string name="category3_name">공립</string>
    <string name="category4_name">법인/사립</string>
    <string name="category5_name">학교</string>
    <string name="category6_name">기타</string>
    <string name="category7_name">외국</string>

    <!-- 카테고리 영어 이름 정의 -->
    <string name="category1_nameEN">National 1</string>
    <string name="category2_nameEN">National 2</string>
    <string name="category3_nameEN">Public</string>
    <string name="category4_nameEN">Corporation/Private</string>
    <string name="category5_nameEN">University&amp;College</string>
    <string name="category6_nameEN">Others</string>
    <string name="category7_nameEN">Foreign Country</string>

    <!-- 카테고리 한자 이름 정의 -->
    <string name="category1_nameCN">國立1</string>
    <string name="category2_nameCN">國立2</string>
    <string name="category3_nameCN">公立</string>
    <string name="category4_nameCN">法人/私立</string>
    <string name="category5_nameCN">學校</string>
    <string name="category6_nameCN">其他</string>
    <string name="category7_nameCN">外國</string>

    <!-- 카테고리 코드 정의 -->
    <string name="category1_code">PS01001</string>
    <string name="category2_code">PS01002</string>
    <string name="category3_code">PS01003</string>
    <string name="category4_code">PS01004</string>
    <string name="category5_code">PS01005</string>
    <string name="category6_code">PS01006</string>
    <string name="category7_code">PS01007</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- 앱 종료 메시지  -->
    <string name="finish_message">\'뒤로\'버튼 한번 더 누르시면 종료됩니다.</string>

    <!-- 검색 텍스트 메시지  -->
    <string name="search_message">검색어를 입력해 주세요.</string>

    <!-- 상세조회에서 필드값 정의-->
    <string name="field_name">작품명</string>
    <string name="field_author">작 가</string>
    <string name="field_purposeName2">분 류</string>
    <string name="field_materialName1">재 질</string>
    <string name="field_sizeInfo">사이즈</string>
    <string name="field_museumName2">소유 박물관</string>
    <string name="field_no_desc">설명 없음</string>

    <!-- 더 보기 메뉴 이름-->
    <string name="menu_more_title">더 보기</string>
    <string name="menu_inquiry_title">문의 건의</string>
    <string name="menu_direction_title">사용법</string>
    <string name="menu_app_recommend_title">앱 추천 - 카카오톡</string>
    <string name="menu_project_inquiry_title">프로젝트 문의</string>
    <string name="menu_project_inquiry_email">소프트맨(softman001kr@gmail.com)</string>

    <!-- 카카오 앱 키값-->
    <string name="kakao_app_key">c11b8bbefc7a8f1ba3f8ea9edec2ee52</string>
    <string name="kakao_message">자세히 보기</string>

    <!-- 사용법 설명 문구-->
    <string name="direction_num_1">1. 박물관 정보는 공공데이타 포털(https://www.data.go.kr) 에서 제공해 주는 데이타를 이용했습니다.</string>
    <string name="direction_num_2">2. 데이타가 안 나오는 박물관이 다수 있어서 그럴 경우 검색 메뉴를 이용해 주시기 바랍니다.</string>
    <string name="direction_num_3">3. 검색어 입력시 찾고자 하는 문화재의 정확한 이름을 입력해 주시기 바랍니다.</string>
    <string name="direction_num_4">4. 공공데이타 포털에서 데이타를 제공해 주는 즉시, 앱 사용자들에게 추가 데이타 입력을 알리도록 하겠습니다.</string>

    <!-- 네트워크 문구-->
    <string name="network_error_title">네트워크 오류</string>
    <string name="network_connect">네트워크에 연결 됨</string>
    <string name="network_disconnect">네트워크에 연결 안 됨</string>

    <!-- 스플래쉬 화면 문구-->
    <string name="splash_text_1">궁금한 사항이 있으세요?</string>
    <string name="splash_text_2">softman001kr@gmail.com 으로 </string>
    <string name="splash_text_3">문의 하세요.</string>

    <!-- 이색 박물관 제목-->
    <string name="strange_museum_title">이색 박물관</string>

    <!-- 전시회 정보 제목-->
    <string name="exhibition_info_title">전시회 정보</string>

    <!-- firebase channel ID 설정-->
    <string name="default_notification_channel_id">mymuseuntrip_channel_id</string>

    <!-- 데이타 통신 문구-->
    <string name="success_text">전송이 완료되었습니다.</string>
    <string name="fail_text">서버와의 통신 오류입니다.</string>
</resources>
