<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.jerryfamily.mymuseumtrip.MainActivity">

    <!-- 상단 메뉴 들어가는 부분 -->
    <include layout="@layout/toolbar" />

    <!-- 중앙 내용 들어가는 부분 -->
    <LinearLayout
        android:id="@+id/linearlayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbarLinearLayout"
        android:background="@drawable/main_bg"
        android:orientation="vertical"
        android:weightSum="100">

        <!-- 국립1 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="14.2"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView_num_1"
                style="@style/ImageViewText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/category1_name"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/colorGreyDark"/>
        </LinearLayout>

        <!-- 국립2 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="14.2"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView_num_2"
                style="@style/ImageViewText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/category2_name"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/colorGreyDark"/>
        </LinearLayout>

        <!-- 공립 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="14.2"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView_num_3"
                style="@style/ImageViewText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/category3_name"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/colorGreyDark"/>
        </LinearLayout>

        <!-- 법인/사립 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="14.2"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView_num_4"
                style="@style/ImageViewText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/category4_name"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/colorGreyDark"/>
        </LinearLayout>

        <!-- 학교 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="14.2"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView_num_5"
                style="@style/ImageViewText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/category5_name"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/colorGreyDark"/>
        </LinearLayout>

        <!-- 기타 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="14.2"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView_num_6"
                style="@style/ImageViewText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/category6_name"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/colorGreyDark"/>
        </LinearLayout>

        <!-- 외국 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="14.2"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView_num_7"
                style="@style/ImageViewText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/category7_name"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/colorGreyDark" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
